--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,13 @@ android {
 
 dependencies {
     // Kamera
-    def camerax_version = "1.0.0-beta07"
+    def camerax_version = "1.0.0-beta12"
+    // CameraX core library using camera2 implementation
     implementation "androidx.camera:camera-camera2:$camerax_version"
+    // CameraX Lifecycle Library
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-view:1.0.0-alpha14"
+    // CameraX View class
+    implementation "androidx.camera:camera-view:1.0.0-alpha19"
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
